[gd_scene format=3 uid="uid://bk4cswc1sjfxw"]

[ext_resource type="Script" uid="uid://bb0d75bicios7" path="res://Singletons/GameOver.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dayjws668e5cv" path="res://Art/Logo Base White.png" id="2"]
[ext_resource type="Theme" uid="uid://dyklcre5xi6tl" path="res://Theme/Theme_Large_Medium_Font.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://ds36c3qoqmf3y" path="res://Controller Glyph.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b5w1afldacdb1" path="res://CustomButton.tscn" id="5"]
[ext_resource type="Theme" uid="uid://f0mobaom23an" path="res://Theme/Theme_Large_Font.tres" id="6"]
[ext_resource type="PackedScene" uid="uid://b0bx5ybu6bfpq" path="res://Game Modes Selector.tscn" id="7"]

[sub_resource type="Shader" id="Shader_yfkwl"]
resource_local_to_scene = true
code = "shader_type canvas_item;

render_mode blend_mix; // allows transparency blending

uniform float strength: hint_range(0., 1.) = 0.5;
uniform float speed: hint_range(0., 10.) = 0.5;
uniform float angle: hint_range(0., 360.) = 0.;
uniform float transparency: hint_range(0., 1.) = 0.5; // controls how see-through the effect is

void fragment() {
	float hue = UV.x * cos(radians(angle)) - UV.y * sin(radians(angle));
	hue = fract(hue + fract(TIME * speed));

	float x = 1. - abs(mod(hue / (1. / 6.), 2.) - 1.);
	vec3 rainbow;
	if (hue < 1. / 6.) {
		rainbow = vec3(1., x, 0.);
	} else if (hue < 1. / 3.) {
		rainbow = vec3(x, 1., 0.);
	} else if (hue < 0.5) {
		rainbow = vec3(0, 1., x);
	} else if (hue < 2. / 3.) {
		rainbow = vec3(0., x, 1.);
	} else if (hue < 5. / 6.) {
		rainbow = vec3(x, 0., 1.);
	} else {
		rainbow = vec3(1., 0., x);
	}

	vec4 base_color = texture(TEXTURE, UV);
	vec3 mixed = mix(base_color.rgb, rainbow, strength);

	// Apply transparency so the sprite behind can show through
	COLOR = vec4(mixed, base_color.a * (1.0 - transparency));
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ak50l"]
resource_local_to_scene = true
shader = SubResource("Shader_yfkwl")
shader_parameter/strength = 0.66000003135
shader_parameter/speed = 0.5
shader_parameter/angle = 200.0000095
shader_parameter/transparency = 0.0

[node name="Game Over Screen" type="ColorRect" unique_id=1583062714]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=675894968]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer" unique_id=1184687610]
layout_mode = 2
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2" unique_id=894493207]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer" unique_id=1582875815]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer" unique_id=1436466170]
material = SubResource("ShaderMaterial_ak50l")
layout_mode = 2
texture = ExtResource("2")
stretch_mode = 5

[node name="Our Names" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer" unique_id=53421503]
layout_mode = 2
theme = ExtResource("3")
text = "GAME_OVER_MADE_BY"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer2" unique_id=1925174116]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="New Modes HBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/Buttons" unique_id=1771644533]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Controller Glyph" parent="MarginContainer/VBoxContainer2/Buttons/New Modes HBox" unique_id=750144857 instance=ExtResource("4")]
layout_mode = 2
enabled = false

[node name="Play New Modes" parent="MarginContainer/VBoxContainer2/Buttons/New Modes HBox" unique_id=1857556489 node_paths=PackedStringArray("glyph_comp") instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 4
text = "PLAY_NEW_MODES"
enable_on_focus = true
glyph_comp = NodePath("../Controller Glyph")

[node name="Start Epilogue HBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/Buttons" unique_id=1969591364]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Controller Glyph" parent="MarginContainer/VBoxContainer2/Buttons/Start Epilogue HBox" unique_id=355065276 instance=ExtResource("4")]
layout_mode = 2
enabled = false

[node name="Start Epilogue" parent="MarginContainer/VBoxContainer2/Buttons/Start Epilogue HBox" unique_id=1142372872 node_paths=PackedStringArray("glyph_comp") instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "PLAY_EPILOGUE"
enable_on_focus = true
glyph_comp = NodePath("../Controller Glyph")

[node name="One More Time Hbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/Buttons" unique_id=905953136]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Controller Glyph" parent="MarginContainer/VBoxContainer2/Buttons/One More Time Hbox" unique_id=382401830 instance=ExtResource("4")]
layout_mode = 2
enabled = false

[node name="One More Time" parent="MarginContainer/VBoxContainer2/Buttons/One More Time Hbox" unique_id=150645860 node_paths=PackedStringArray("glyph_comp") instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "ONE_MORE_TIME"
enable_on_focus = true
glyph_comp = NodePath("../Controller Glyph")

[node name="Main Menu Hbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/Buttons" unique_id=1063533141]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Controller Glyph" parent="MarginContainer/VBoxContainer2/Buttons/Main Menu Hbox" unique_id=1628954332 instance=ExtResource("4")]
layout_mode = 2
enabled = false

[node name="Main Menu" parent="MarginContainer/VBoxContainer2/Buttons/Main Menu Hbox" unique_id=1144005019 node_paths=PackedStringArray("glyph_comp") instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "MAIN MENU"
enable_on_focus = true
glyph_comp = NodePath("../Controller Glyph")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1441461144]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=2117203263]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=1110110539]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer" unique_id=206303131]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="Game Over Text" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer" unique_id=1064195088]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="Unlcoked" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/Game Over Text" unique_id=699627167]
visible = false
layout_mode = 2
theme = ExtResource("3")
theme_override_colors/font_color = Color(0.4176, 0.72, 0.4932, 1)
text = "GAME_OVER_YOU_UNLCOKED"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Go Play" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/Game Over Text" unique_id=2045960315]
visible = false
layout_mode = 2
theme = ExtResource("3")
theme_override_colors/font_color = Color(0.41760004, 0.60408, 0.72, 1)
text = "GAME_OVER_CALL_TO_PLAY_MORE"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Thank you" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/Game Over Text" unique_id=1996244547]
visible = false
layout_mode = 2
theme = ExtResource("3")
theme_override_colors/font_color = Color(0.619608, 0.360784, 0.376471, 1)
text = "GAME_OVER_THANK_YOU"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Game Over Demo Text" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer" unique_id=1152531010]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="Thank you" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/Game Over Demo Text" unique_id=212033452]
visible = false
layout_mode = 2
theme = ExtResource("3")
theme_override_colors/font_color = Color(0.619608, 0.360784, 0.376471, 1)
text = "GAME_OVER_THANK_YOU_DEMO"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Epiloge Text" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer" unique_id=1094195620]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="Epilogue Finish" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/Epiloge Text" unique_id=4179262]
visible = false
layout_mode = 2
theme = ExtResource("3")
theme_override_colors/font_color = Color(0.4176, 0.72, 0.4932, 1)
text = "EPILOGUE_CALL_TO_PLAY_MORE"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Alt Mode Game Over" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer" unique_id=784951581]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="Quick Mode Finished" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/Alt Mode Game Over" unique_id=243046861]
visible = false
layout_mode = 2
theme = ExtResource("3")
theme_override_colors/font_color = Color(0.4176, 0.72, 0.4932, 1)
text = "QUICK_MODE_GAME_OVER_TEXT"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1044676333]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Controller Glyph" parent="MarginContainer/VBoxContainer/HBoxContainer4" unique_id=39375014 instance=ExtResource("4")]
layout_mode = 2
enabled = false

[node name="Buy the Game" parent="MarginContainer/VBoxContainer/HBoxContainer4" unique_id=1030089917 node_paths=PackedStringArray("glyph_comp") instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("6")
text = "BUY THE GAME"
enable_on_focus = true
glyph_comp = NodePath("../Controller Glyph")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=509054661]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Game Mode Screen" parent="VBoxContainer" unique_id=1286564009 instance=ExtResource("7")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
is_game_over_screen = true
center_scale = 1.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=797631040]

[connection signal="pressed" from="MarginContainer/VBoxContainer2/Buttons/New Modes HBox/Play New Modes" to="." method="_on_play_new_modes_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Buttons/Start Epilogue HBox/Start Epilogue" to="." method="_on_start_epilogue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Buttons/One More Time Hbox/One More Time" to="." method="_on_start_epilogue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Buttons/Main Menu Hbox/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer4/Buy the Game" to="." method="_on_buy_the_game_pressed"]
